[gd_scene load_steps=7 format=3 uid="uid://biim2lxri0akl"]

[ext_resource type="Script" uid="uid://d4cr67i8sc3n2" path="res://scene/combat/hand/Hand.gd" id="1_7p7dw"]
[ext_resource type="Script" uid="uid://4kp0v7bksdli" path="res://scene/combat/hand/HandDragController.gd" id="2_ofg4e"]
[ext_resource type="Script" uid="uid://bl2hgtp0mjqmi" path="res://scene/combat/hand/HandLayoutController.gd" id="3_vitx4"]
[ext_resource type="Script" uid="uid://xy6jtyg4pao1" path="res://scene/combat/hand/HandDrawController.gd" id="4_k0pr5"]
[ext_resource type="Script" uid="uid://chy46ny585bw8" path="res://scene/combat/hand/HandInsertController.gd" id="5_0frfd"]
[ext_resource type="Script" uid="uid://cdwrf51u2raib" path="res://scene/combat/hand/HandInteractionController.gd" id="6_7ov20"]

[node name="Hand" type="Node2D"]
position = Vector2(638, 566)
script = ExtResource("1_7p7dw")

[node name="Cards" type="Node2D" parent="."]
top_level = true
z_index = 10
position = Vector2(640, 618)

[node name="HandArea" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -598.0
offset_top = 9.0
offset_right = 602.0
offset_bottom = 160.0
mouse_filter = 2
metadata/_edit_use_anchors_ = true

[node name="HandDragController" type="Node" parent="."]
script = ExtResource("2_ofg4e")

[node name="HandLayoutController" type="Node" parent="."]
script = ExtResource("3_vitx4")

[node name="HandDrawController" type="Node" parent="."]
script = ExtResource("4_k0pr5")

[node name="HandInsertController" type="Node" parent="."]
script = ExtResource("5_0frfd")

[node name="HandInteractionController" type="Node" parent="."]
script = ExtResource("6_7ov20")
